dual-compile strategy

--- a/package.json
+++ b/package.json
@@ -87,12 +87,13 @@
   "scripts": {
     "postinstall": "echo 'To generate a new actionhero project, run \"npx actionhero generate\"'",
     "test": "jest",
-    "prepare": "npm run build && npm run docs",
+    "prepare": "npm run build && npm run build-clients && npm run docs",
     "pretest": "npm run lint && npm run build",
     "dev": "ts-node-dev --transpile-only --no-deps ./src/server",
     "debug": "tsc && ts-node-dev --transpile-only --no-deps --inspect -- ./src/server ",
     "start": "node ./dist/server.js",
     "build": "rm -rf dist && ./node_modules/.bin/tsc --sourceMap false --declaration",
+    "build-clients": "rm -rf public/clients && ./node_modules/.bin/tsc --project clients.tsconfig.json",
     "watch": "rm -rf dist && ./node_modules/.bin/tsc --sourceMap false --declaration --watch",
     "docs": "typedoc --out docs --theme default src/index.ts",
     "lint": "prettier --check src __tests__",
