--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Evan Tahler <evantahler@gmail.com>",
   "name": "actionhero",
   "description": "The reusable, scalable, and quick node.js API server for stateless and stateful applications",
-  "version": "27.3.0",
+  "version": "27.1.3",
   "homepage": "http://www.actionherojs.com",
   "license": "Apache-2.0",
   "repository": {
@@ -34,41 +34,48 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "@types/ioredis": "^4.28.1",
+    "@types/ioredis": "^4.26.7",
     "browser_fingerprint": "^2.0.3",
-    "commander": "^8.3.0",
+    "commander": "^7.2.0",
     "dot-prop": "^6.0.1",
     "etag": "^1.8.1",
-    "formidable": "^2.0.1",
-    "glob": "^7.2.0",
-    "ioredis": "^4.28.0",
+    "formidable": "^1.2.2",
+    "glob": "^7.1.7",
+    "ioredis": "^4.27.8",
     "is-running": "^2.1.0",
-    "mime": "^3.0.0",
+    "mime": "^2.5.2",
     "node-resque": "^9.1.1",
     "primus": "^8.0.5",
     "qs": "^6.10.1",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
-    "ws": "^8.2.3",
-    "yargs": "^17.2.1"
+    "ws": "^8.2.0",
+    "yargs": "^17.1.1"
   },
   "devDependencies": {
-    "@types/glob": "^7.2.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.7",
-    "@types/primus": "^7.3.6",
+    "@types/etag": "^1.8.1",
+    "@types/formidable": "^1.2.4",
+    "@types/glob": "^7.1.4",
+    "@types/ioredis-mock": "^5.6.0",
+    "@types/jest": "^27.0.1",
+    "@types/mime": "^2.0.3",
+    "@types/node": "^16.7.1",
+    "@types/primus": "^7.3.5",
     "@types/puppeteer": "^5.4.4",
+    "@types/qs": "^6.9.7",
+    "@types/request-promise-native": "^1.0.18",
     "@types/uuid": "^8.3.1",
-    "ioredis-mock": "^5.7.0",
-    "jest": "^27.3.1",
-    "prettier": "^2.4.1",
-    "puppeteer": "^11.0.0",
+    "ioredis-mock": "^5.6.0",
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
+    "puppeteer": "^10.2.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
-    "typedoc": "^0.22.8",
-    "typescript": "^4.4.4"
+    "type-fest": "^2.3.2",
+    "typedoc": "^0.22.3",
+    "typescript": "^4.3.5"
   },
   "bin": {
     "actionhero": "dist/bin/actionhero.js"
