--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@types/glob": "^7.1.4",
     "@types/jest": "^27.0.1",
+    "@types/mime": "^2.0.3",
     "@types/node": "^16.7.1",
     "@types/primus": "^7.3.5",
     "@types/puppeteer": "^5.4.4",
@@ -67,6 +68,7 @@
     "request-promise-native": "^1.0.9",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
+    "type-fest": "^2.3.2",
     "typedoc": "^0.22.3",
     "typescript": "^4.3.5"
   },
