--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
     "@types/etag": "^1.8.1",
     "@types/formidable": "^1.2.4",
     "@types/glob": "^7.1.4",
+    "@types/ioredis-mock": "^5.6.0",
     "@types/jest": "^27.0.1",
     "@types/mime": "^2.0.3",
     "@types/node": "^16.7.1",
     "@types/primus": "^7.3.5",
     "@types/puppeteer": "^5.4.4",
     "@types/qs": "^6.9.7",
+    "@types/request-promise-native": "^1.0.18",
     "@types/uuid": "^8.3.1",
     "ioredis-mock": "^5.6.0",
     "jest": "^27.0.6",
