--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/formidable": "^1.2.4",
     "@types/glob": "^7.1.4",
     "@types/ioredis-mock": "^5.6.0",
+    "@types/is-running": "^2.1.0",
     "@types/jest": "^27.0.1",
     "@types/mime": "^2.0.3",
     "@types/node": "^16.7.1",
