--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Evan Tahler <evantahler@gmail.com>",
   "name": "actionhero",
   "description": "The reusable, scalable, and quick node.js API server for stateless and stateful applications",
-  "version": "v28.0.0-alpha.2",
+  "version": "28.0.0",
   "homepage": "http://www.actionherojs.com",
   "license": "Apache-2.0",
   "repository": {
