--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -105,6 +108,8 @@ jobs:
           maxMemoryAlloted: 10000
 
   complete:
+    permissions:
+      contents: none
     runs-on: ubuntu-latest
     needs: [lint, docs, test]
     steps:
