--- a/package.json
+++ b/package.json
@@ -34,47 +34,47 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "@types/ioredis": "^4.28.7",
+    "@types/ioredis": "^4.28.10",
     "browser_fingerprint": "^2.0.4",
-    "commander": "^9.0.0",
+    "commander": "^9.2.0",
     "dot-prop": "^6.0.1",
     "etag": "^1.8.1",
     "formidable": "^2.0.1",
     "glob": "^8.0.1",
     "ioredis": "^4.28.3",
     "mime": "^3.0.0",
-    "node-resque": "^9.1.5",
-    "primus": "^8.0.5",
+    "node-resque": "^9.1.7",
+    "primus": "^8.0.6",
     "qs": "^6.10.3",
     "uuid": "^8.3.2",
-    "winston": "^3.5.1",
-    "ws": "^8.4.2",
-    "yargs": "^17.3.1"
+    "winston": "^3.7.2",
+    "ws": "^8.6.0",
+    "yargs": "^17.4.1"
   },
   "devDependencies": {
     "@types/etag": "^1.8.1",
-    "@types/formidable": "^2.0.4",
+    "@types/formidable": "^2.0.5",
     "@types/glob": "^7.2.0",
     "@types/ioredis-mock": "^5.6.0",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^27.4.1",
     "@types/mime": "^2.0.3",
-    "@types/node": "^17.0.14",
+    "@types/node": "^17.0.31",
     "@types/primus": "^7.3.6",
-    "@types/puppeteer": "^5.4.4",
+    "@types/puppeteer": "^5.4.6",
     "@types/qs": "^6.9.7",
     "@types/request-promise-native": "^1.0.18",
     "@types/uuid": "^8.3.4",
-    "ioredis-mock": "^7.0.0",
-    "jest": "^27.4.7",
-    "prettier": "^2.5.1",
-    "puppeteer": "^13.1.3",
+    "ioredis-mock": "7.1.0",
+    "jest": "^28.0.3",
+    "prettier": "^2.6.2",
+    "puppeteer": "^13.7.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^27.1.4",
     "ts-node-dev": "^1.1.8",
-    "type-fest": "^2.11.1",
-    "typedoc": "^0.22.11",
-    "typescript": "^4.5.5"
+    "type-fest": "^2.12.2",
+    "typedoc": "^0.22.15",
+    "typescript": "^4.6.4"
   },
   "bin": {
     "actionhero": "dist/bin/actionhero.js"
