types/glob is now required for generated projects

--- a/templates/package.json.template
+++ b/templates/package.json.template
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/node": "latest",
     "@types/jest": "latest",
+    "@types/glob": "latest",
     "jest": "latest",
     "prettier": "latest",
     "ts-jest": "latest",
