`@types/glob` is now required for generated projects (#2298)
* types/glob is now required for generated projects

* update order

--- a/templates/package.json.template
+++ b/templates/package.json.template
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "latest",
+    "@types/glob": "latest",
     "@types/jest": "latest",
     "jest": "latest",
     "prettier": "latest",
