Test with node.js 18

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,10 +17,10 @@ jobs:
       image: node
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 14.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v3.5.1
         with:
-          node-version: 14.x
+          node-version: 18.x
       - run: npm ci
       - name: save cache
         uses: actions/cache@v3.0.11
@@ -37,10 +37,10 @@ jobs:
       image: node
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 14.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v3.5.1
         with:
-          node-version: 14.x
+          node-version: 18.x
       - name: download cache
         uses: actions/cache@v3.0.11
         with:
@@ -57,10 +57,10 @@ jobs:
       image: node
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 14.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v3.5.1
         with:
-          node-version: 14.x
+          node-version: 18.x
       - name: download cache
         uses: actions/cache@v3.0.11
         with:
@@ -84,7 +84,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [14.x, 16.x]
+        node-version: [14.x, 16.x, 18.x]
 
     steps:
       - uses: actions/checkout@v3
