--- a/package.json
+++ b/package.json
@@ -61,13 +61,16 @@
     "@types/node": "^18.13.0",
     "@types/primus": "^7.3.6",
     "@types/qs": "^6.9.7",
+    "@types/tough-cookie": "^4.0.2",
     "@types/uuid": "^9.0.0",
     "axios": "^1.3.3",
+    "axios-cookiejar-support": "^4.0.6",
     "form-data": "^4.0.0",
     "ioredis-mock": "^8.2.6",
     "jest": "^29.3.1",
     "prettier": "^2.8.4",
     "puppeteer": "^19.7.0",
+    "tough-cookie": "^4.1.2",
     "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "typedoc": "^0.23.25",
