--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,7 +63,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - name: install puppeteer dependencies
-        run: apt-get update && apt-get install -y libgtk2.0-0 libgtk-3-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb libgbm-dev
+        run: apt-get update && apt-get install -y chromium-browser
       - run: ./node_modules/.bin/jest --ci
         env:
           REDIS_HOST: redis
